--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body{
 }
 /* navigation part end */
 #banner{
-    background: url(/images/banner.jpg);
+    background: url(../images/banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
